--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,28 @@
+atomicwrites==1.4.0
+attrs==21.4.0
+colorama==0.4.4
 Django==2.2.20
+flake8==4.0.1
+flake8-broken-line==0.4.0
+flake8-isort==4.1.1
+flake8-plugin-utils==1.3.2
+flake8-polyfill==1.0.2
+flake8-return==1.1.3
+importlib-metadata==4.2.0
+iniconfig==1.1.1
+isort==5.10.1
+mccabe==0.6.1
+packaging==21.3
+pep8-naming==0.12.1
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.7
+pytest==7.1.1
 pytz==2021.1
 sqlparse==0.4.1
+testfixtures==6.18.5
+tomli==2.0.1
+typing-extensions==4.1.1
+zipp==3.8.0
